--- a/chart/templates/gitlab-runner/values.yaml
+++ b/chart/templates/gitlab-runner/values.yaml
@@ -16,7 +16,9 @@ istio:
 
 networkPolicies:
   enabled: {{ .Values.networkPolicies.enabled }}
-
+  controlPlaneCidr: {{ .Values.networkPolicies.controlPlaneCidr }}
+  kubeapiPort: {{ .Values.networkPolicies.kubeapiPort }}
+  
 # no longer necessary to directly pass through .Values.monitoring.enabled
 # the package chart uses: .Capabilities.APIVersions.Has "monitoring.coreos.com/v1" to toggle monitoring
 metrics:
