update for registry1 connect

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2479,6 +2479,7 @@ addons:
                   - 'cdn.cypress.io'
                   - 'harbor.dev.bigbang.mil'
                   - 'repo1.dso.mil'
+                  - 'registry1.dso.mil'
                   - 'index.docker.io'
                   - 'auth.docker.io'
                   - 'production.cloudflare.docker.com'
