update gitlab runner branch ref

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1570,7 +1570,7 @@ addons:
     enabled: true
     git:
       tag: null
-      branch: "bb-1931-net-pol-update"
+      branch: "1931-gitlab-runner-not-passing-control-plane-cidr"
     values:
       istio:
         enabled: true
