--- a/chart/templates/thanos/values.yaml
+++ b/chart/templates/thanos/values.yaml
@@ -61,3 +61,4 @@ query:
   {{- if .Values.addons.thanos.sso.enabled }}
   podLabels:
     {{ $thanosAuthserviceKey }}: {{ $thanosAuthserviceValue }}
+  {{- end }}
