--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2647,10 +2647,30 @@ addons:
   thanos:
     # -- Toggle deployment of thanos
     enabled: false
+    sso:
+      enabled: false
+      client_id: dev_00eb8904-5b88-4c68-ad67-cec0d2e07aa6_thanos
     values:
       istio:
         hardened:
           enabled: true
+        customServiceEntries:
+          - name: "cypress-service-entries-thanos"
+            enabled: true
+            spec:
+              hosts:
+                - 'registry.npmjs.org'
+                - 'download.cypress.io'
+                - 'cdn.cypress.io'
+                - 'repo1.dso.mil'
+                - 'thanos.dev.bigbang.mil'
+                - 'grafana.dev.bigbang.mil'
+              location: MESH_EXTERNAL
+              ports:
+                - number: 443
+                  protocol: TLS
+                  name: https
+              resolution: DNS
       minio:
         enabled: true
         tenant:
