test renovate change for gluon 0.5.0

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1566,6 +1566,9 @@ addons:
             GITLAB_REGISTRY: registry.dev.bigbang.mil
 
   gitlabRunner:
+    git:
+      tag: null
+      branch: "renovate/ironbank"
     enabled: false
     values:
       istio:
