--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1443,7 +1443,7 @@ addons:
           enabled: true
 
   gitlab:
-    enabled: false
+    enabled: true
     sso:
       enabled: false
       client_id: dev_00eb8904-5b88-4c68-ad67-cec0d2e07aa6_gitlab
@@ -1569,7 +1569,7 @@ addons:
     git:
       tag: null
       branch: "renovate/ironbank"
-    enabled: false
+    enabled: true
     values:
       istio:
         enabled: true
