remove r1 from test endpoints allow

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2485,12 +2485,11 @@ addons:
         hardened:
           enabled: true
           customServiceEntries:
-            - name: "allow-npm-for-cypress-tests"
+            - name: "allow-for-cypress-tests"
               enabled: true
               spec:
                 hosts:
                   - 'registry.npmjs.org'
-                  - 'registry1.dso.mil'
                   - 'download.cypress.io'
                   - 'cdn.cypress.io'
                   - 'harbor.dev.bigbang.mil'
