--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2234,6 +2234,9 @@ addons:
 
   keycloak:
     enabled: false
+    git:
+      tag: null
+      branch: "119-keycloak-sidecar"
     ingress:
       gateway: "passthrough"
       key: "" # Gets added via chart/ingress-certs.yaml
