--- a/chart/templates/elasticsearch-kibana/helmrelease.yaml
+++ b/chart/templates/elasticsearch-kibana/helmrelease.yaml
@@ -71,4 +71,6 @@ spec:
     - name: kyverno-policies
       namespace: {{ .Release.Namespace }}
     {{- end }}
+  driftDetection:
+  {{- toYaml  $.Values.flux.driftDetection | nindent 4 }}
 {{- end }}
