--- a/chart/templates/thanos/helmrelease.yaml
+++ b/chart/templates/thanos/helmrelease.yaml
@@ -71,4 +71,6 @@ spec:
       namespace: {{ .Release.Namespace }}
   {{- end }}
   {{- end }}
+  driftDetection:
+  {{- toYaml  $.Values.flux.driftDetection | nindent 4 }}
 {{- end }}
