--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -134,6 +134,8 @@ flux:
   rollback:
     timeout: 10m
     cleanupOnFail: true
+  driftDetection:
+    mode: enabled
 
 # -- Global NetworkPolicies settings
 networkPolicies:
