Fixed incorrect yaml format

--- a/chart/templates/eck-operator/helmrelease.yaml
+++ b/chart/templates/eck-operator/helmrelease.yaml
@@ -70,7 +70,7 @@ spec:
       namespace: {{ .Release.Namespace }}
     {{- end }}
   {{- end }}
-  
+
   driftDetection:
-  {{- toYaml  $.Values.flux.driftDetection | nindent 4 }}
+  {{- toYaml  .Values.flux.driftDetection | nindent 4 }}
 {{- end }}
