--- a/chart/templates/grafana/helmrelease.yaml
+++ b/chart/templates/grafana/helmrelease.yaml
@@ -76,6 +76,6 @@ spec:
   {{- end }}
   {{- end }}
   driftDetection:
-  {{- toYaml  $.Values.flux.driftDetection | nindent 4 }}
+  {{- toYaml  .Values.flux.driftDetection | nindent 4 }}
 {{- end }}
 
