--- a/chart/templates/elasticsearch-kibana/helmrelease.yaml
+++ b/chart/templates/elasticsearch-kibana/helmrelease.yaml
@@ -72,5 +72,5 @@ spec:
       namespace: {{ .Release.Namespace }}
     {{- end }}
   driftDetection:
-  {{- toYaml  $.Values.flux.driftDetection | nindent 4 }}
+  {{- toYaml  .Values.flux.driftDetection | nindent 4 }}
 {{- end }}
