--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -2030,6 +2030,26 @@ addons:
       chartName: "thanos"
       tag: "13.2.2-bb.6"
 
+    # Object storage configuration for Thanos: https://thanos.io/tip/thanos/storage.md/#s3
+    objectStorage:
+      # -- S3 compatible endpoint to use for connection information.
+      # examples: "https://s3.amazonaws.com" "https://s3.us-gov-west-1.amazonaws.com" "http://minio.minio.svc.cluster.local:9000"
+      endpoint: ""
+
+      # -- S3 compatible region to use for connection information.
+      region: ""
+
+      # -- Access key for connecting to object storage endpoint.
+      accessKey: ""
+
+      # -- Secret key for connecting to object storage endpoint.
+      # Unencoded string data. This should be placed in the secret values and then encrypted
+      accessSecret: ""
+
+      # -- Bucket Name for Thanos
+      # examples: "thanos-metrics"
+      bucketNames: {}
+
     # -- Flux reconciliation overrides specifically for the Thanos Package
     flux: {}
 
