Removed accidental change

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -802,7 +802,7 @@ kyvernoPolicies:
               namespaces:
               - argocd
               names:
-              - guestbook-ui-*
+              - guestbook
           - resources:
               namespaces:
               - velero
