#1993 : Pass big bang values through to package charts

--- a/chart/templates/package/values.yaml
+++ b/chart/templates/package/values.yaml
@@ -17,6 +17,8 @@ type: Opaque
 stringData:
   {{ if and (dig "enabled" true $vals) (not $vals.kustomize) -}}
   values.yaml: |
+    bigbang:
+      {{- include "values-bigbang" $.Values | nindent 6 }}
   {{- tpl (toYaml $vals.values) $ | nindent 4 }}
   {{ else }}
   {{- tpl (toYaml $vals.values) $ | nindent 2 }}
