Removed flux value

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -134,8 +134,8 @@ flux:
   rollback:
     timeout: 10m
     cleanupOnFail: true
-  driftDetection:
-    mode: enabled
+  #driftDetection:
+  #  mode: enabled
 
 # -- Global NetworkPolicies settings
 networkPolicies:
