--- a/chart/templates/metrics-server/helmrelease.yaml
+++ b/chart/templates/metrics-server/helmrelease.yaml
@@ -72,5 +72,5 @@ spec:
     {{- end }}
   {{- end }}
   driftDetection:
-  {{- toYaml  .Values.flux.driftDetection | nindent 4 }}
+    mode: enabled
 {{- end }}
