fixed tempo to thanos
Signed-off-by: Kliu <kliu@vivsoft.io>

--- a/chart/templates/thanos/values.yaml
+++ b/chart/templates/thanos/values.yaml
@@ -62,7 +62,7 @@ query:
   podLabels:
     {{ $thanosAuthserviceKey }}: {{ $thanosAuthserviceValue }}
   {{- end }}
-{{- if .Values.objstoreConfig }}
+{{- if .Values.thanos.objstoreConfig }}
 
 objstoreConfig: |-
   type: s3
