--- a/chart/templates/thanos/values.yaml
+++ b/chart/templates/thanos/values.yaml
@@ -62,7 +62,7 @@ query:
   podLabels:
     {{ $thanosAuthserviceKey }}: {{ $thanosAuthserviceValue }}
   {{- end }}
-{{- if .Valuesaddons.thanos.objstoreConfig }}
+{{- if .Values.addons.thanos.objstoreConfig }}
 
 objstoreConfig: |-
   type: s3
