fixed the bucket name type for thanos
Signed-off-by: Kliu <kliu@vivsoft.io>

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -2048,7 +2048,7 @@ addons:
 
       # -- Bucket Name for Thanos
       # examples: "thanos-metrics"
-      bucketNames: {}
+      bucketNames: ""
 
     # -- Flux reconciliation overrides specifically for the Thanos Package
     flux: {}
