--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1387,7 +1387,7 @@ addons:
             size: 256Mi
 
   fortify:
-    enabled: false
+    enabled: true
     git:
       tag: null
       branch: 88-egress-whitelist-fortify
