--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1409,6 +1409,7 @@ addons:
                   - 'registry.npmjs.org'
                   - 'download.cypress.io'
                   - 'cdn.cypress.io'
+                  - 'fortify.dev.bigbang.mil'
                 location: MESH_EXTERNAL
                 ports:
                   - number: 443
