--- a/chart/templates/thanos/helmrelease.yaml
+++ b/chart/templates/thanos/helmrelease.yaml
@@ -71,6 +71,6 @@ spec:
       namespace: {{ .Release.Namespace }}
   {{- end }}
   {{- end }}
-  driftDetection:
-    mode: warn
+  #driftDetection:
+  #  mode: warn
 {{- end }}
