add fluentbit helmrelease as dependency for ECK in CI test values

--- a/chart/templates/elasticsearch-kibana/helmrelease.yaml
+++ b/chart/templates/elasticsearch-kibana/helmrelease.yaml
@@ -71,4 +71,8 @@ spec:
     - name: kyverno-policies
       namespace: {{ .Release.Namespace }}
     {{- end }}
+    {{- if .Values.elasticsearchKibana.fluentbit.enabled }}
+    - name: fluentbit
+      namespace: {{ .Release.Namespace }}
+    {{- end }}
 {{- end }}
