--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -825,6 +825,8 @@ elasticsearchKibana:
     client_id: dev_00eb8904-5b88-4c68-ad67-cec0d2e07aa6_kibana
   license:
     trial: false
+  fluentbit:
+    enabled: true
   values:
     istio:
       hardened:
