--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1780,8 +1780,27 @@ addons:
           envs:
             ANCHORE_CLI_URL: "https://anchore-api.dev.bigbang.mil/v1"
         cypress:
-          envs:
+          resources:
+            requests:
+              cpu: "1"
+              memory: "2Gi"
+            limits:
+              cpu: "1"
+              memory: "2Gi"
+          artifacts: true
+          envs: 
+            # cypress_url: "http://{{ template \"enterprise.ui.fullname\" . }}:{{ .Values.ui.service.port }}"
             cypress_url: "https://anchore.dev.bigbang.mil"
+            cypress_user: admin
+            cypress_registry: docker.io
+            cypress_repository: anchore/grype
+            cypress_tag: latest
+          secretEnvs:
+            - name: cypress_password
+              valueFrom:
+                secretKeyRef:
+                  name: "{{ template \"enterprise.fullname\" . }}"
+                  key: ANCHORE_ADMIN_PASSWORD
 
   sonarqube:
     enabled: false
