Disabled EK drfit

--- a/chart/templates/elasticsearch-kibana/helmrelease.yaml
+++ b/chart/templates/elasticsearch-kibana/helmrelease.yaml
@@ -72,5 +72,5 @@ spec:
       namespace: {{ .Release.Namespace }}
     {{- end }}
   driftDetection:
-    mode: enabled
+    mode: disabled
 {{- end }}
