update key name

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -825,7 +825,7 @@ elasticsearchKibana:
     client_id: dev_00eb8904-5b88-4c68-ad67-cec0d2e07aa6_kibana
   license:
     trial: false
-  fluentbit:
+  fluentbitHRDependency:
     enabled: true
   values:
     istio:
