--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1271,7 +1271,7 @@ twistlock:
         envs:
           twistlock_host: "https://twistlock.dev.bigbang.mil"
 
-# Addons are toggled based on labels in CI
+# Addons are toggled based on labels in CI test
 addons:
   argocd:
     enabled: false
