--- a/chart/templates/gitlab-runner/helmrelease.yaml
+++ b/chart/templates/gitlab-runner/helmrelease.yaml
@@ -9,7 +9,7 @@ metadata:
     checksum/bigbang-values: {{ include (print $.Template.BasePath "/gitlab-runner/values.yaml") . | sha256sum }}
 spec:
   driftDetection:
-    mode: warn
+    mode: disabled
   targetNamespace: gitlab-runner
   releaseName: gitlab-runner
   chart:
