--- a/chart/templates/sonarqube/helmrelease.yaml
+++ b/chart/templates/sonarqube/helmrelease.yaml
@@ -13,7 +13,7 @@ metadata:
     checksum/bigbang-values: {{ include (print $.Template.BasePath "/sonarqube/values.yaml") . | sha256sum }}
 spec:
   driftDetection:
-    mode: warn
+    mode: disabled
   releaseName: sonarqube
   targetNamespace: sonarqube
   chart:
