test istio 1.22 renovate

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -55,8 +55,16 @@ networkPolicies:
   enabled: true
   #controlPlaneCidr: 172.16.0.0/12
 
+istioOperator:
+  git:
+    tag: null
+    branch: "renovate/ironbank"
+
 istio:
   enabled: true
+  git:
+    tag: null
+    branch: "renovate/ironbank"
   ingressGateways:
     passthrough-ingressgateway:
       type: "LoadBalancer"
