Fixed branch name

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 include:
   - project: 'big-bang/pipeline-templates/pipeline-templates'
-    ref: All-Packages-Old-Pipeline-Test
+    ref: Dedicated-Runner-Test
     file: '/pipelines/bigbang.yaml' 
 variables:
   PIPELINE_REPO_BRANCH: Dedicated-Runner-Test
