--- a/chart/templates/kyverno-policies/helmrelease.yaml
+++ b/chart/templates/kyverno-policies/helmrelease.yaml
@@ -13,7 +13,7 @@ metadata:
     checksum/bigbang-values: {{ include (print $.Template.BasePath "/kyverno-policies/values.yaml") . | sha256sum }}
 spec:
   driftDetection:
-     mode:  warn
+     mode:  enabled
   targetNamespace: kyverno
   chart:
     spec:
