--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,3 +7,4 @@ variables:
   DEBUG_ENABLED: "false"
   CI_DEBUG_TRACE: "false"
   BB_REPO: repo1.dso.mil/bigbang/bigbang
+  CI_DEFAULT_BRANCH: "Dedicated-Runner-Test"
