Another CI Update

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,4 +7,5 @@ variables:
   DEBUG_ENABLED: "false"
   CI_DEBUG_TRACE: "false"
   BB_REPO: repo1.dso.mil/bigbang/bigbang
-  CI_DEFAULT_BRANCH: "Dedicated-Runner-Test"
+  CI_DEFAULT_BRANCH: "All-Packages-Old-Pipeline-Test"
+  CI_MERGE_REQUEST_LABELS: "all-packages"
