--- a/chart/templates/kyverno-policies/helmrelease.yaml
+++ b/chart/templates/kyverno-policies/helmrelease.yaml
@@ -12,8 +12,8 @@ metadata:
   annotations:
     checksum/bigbang-values: {{ include (print $.Template.BasePath "/kyverno-policies/values.yaml") . | sha256sum }}
 spec:
-  driftDetection:
-     mode:  disabled
+  # driftDetection:
+  #    mode:  disabled
   targetNamespace: kyverno
   chart:
     spec:
