--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,5 @@
 # Big Bang Maintainers
-* @michaelmartin @chris.oconnell @andrewshoell @ryan.thompson.44
+* @michaelmartin @chris.oconnell @andrewshoell @ryan.thompson.44 @mike.knight
 
 # Additional Documentation Maintainer
 docs/ @cbowmanclare @michaelmartin @chris.oconnell @andrewshoell @ryan.thompson.44
