--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -696,11 +696,13 @@ loki:
   git:
     repo: https://repo1.dso.mil/big-bang/product/packages/loki.git
     path: "./chart"
-    tag: "6.6.2-bb.3"
+    tag: ""
+    branch: "retry-cypress-test"
   helmRepo:
     repoName: "registry1"
     chartName: "loki"
-    tag: "6.6.2-bb.3"
+    tag: ""
+    branch: "retry-cypress-test"
 
   # -- Flux reconciliation overrides specifically for the Loki Package
   flux: {}
