--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -696,13 +696,11 @@ loki:
   git:
     repo: https://repo1.dso.mil/big-bang/product/packages/loki.git
     path: "./chart"
-    tag: ""
-    branch: "retry-cypress-test"
+    tag: "6.6.2-bb.4"
   helmRepo:
     repoName: "registry1"
     chartName: "loki"
-    tag: ""
-    branch: "retry-cypress-test"
+    tag: "6.6.2-bb.4"
 
   # -- Flux reconciliation overrides specifically for the Loki Package
   flux: {}
