set source and target branches

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,3 +9,5 @@ variables:
   BB_REPO: repo1.dso.mil/bigbang/bigbang
   CI_DEFAULT_BRANCH: "All-Packages-Old-Pipeline-Test"
   CI_MERGE_REQUEST_LABELS: "all-packages"
+  CI_MERGE_REQUEST_TARGET_BRANCH_NAME: "All-Packages-Old-Pipeline-Test"
+  CI_MERGE_REQUEST_SOURCE_BRANCH_NAME: "upgrade-test"
