--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1635,7 +1635,7 @@ addons:
 
   mattermost:
     # -- Toggle deployment of Mattermost.
-    enabled: false
+    enabled: true
 
     # -- Choose source type of "git" or "helmRepo"
     sourceType: "git"
