--- a/chart/templates/minio/values.yaml
+++ b/chart/templates/minio/values.yaml
@@ -16,7 +16,14 @@ istio:
   api:
     gateways:
     - istio-system/{{ default "public" .Values.addons.minio.ingress.gateway }}
+  hardened:
+    {{- if or (dig "istio" "hardened" "enabled" false .Values.addons.minio.values) (dig "hardened" "enabled" false .Values.istio.values) }}
+    enabled: true
+    {{- else}}
+    enabled: false
+    {{- end }}
 
+    
 {{- if .Values.istio.enabled }}
 annotations:
   {{ include "istioAnnotation" . }}
