adding more template changes and moving package activation from test-values to labels

--- a/chart/templates/mattermost-operator/values.yaml
+++ b/chart/templates/mattermost-operator/values.yaml
@@ -22,6 +22,12 @@ networkPolicies:
 
 istio:
   enabled: {{ .Values.istio.enabled }}
+  hardened:
+    {{- if or (dig "istio" "hardened" "enabled" false .Values.addons.minio.values) (dig "hardened" "enabled" false .Values.istio.values) }}
+    enabled: true
+    {{- else}}
+    enabled: false
+    {{- end }}
 
 monitoring:
   enabled: {{ .Values.monitoring.enabled }}
